--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "A simple multiplayer chat game",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "backup": "node backup.js"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
-        "body-parser": "^2.2.0",
+        "body-parser": "^1.9.0",
         "express": "^4.21.2",
         "socket.io": "^4.8.1",
         "sqlite3": "^5.1.7"
